--- a/hero.html
+++ b/hero.html
@@ -2,7 +2,7 @@
 <head>
 </head>
     <div class="bgSizeCover">
-    <body background="Images/background3.jpg" link="white" vlink="white">
+    <body background="images/background3.jpg" link="white" vlink="white">
      </div>
         <font color="white">
         <center>
@@ -19,7 +19,7 @@
         <br/>
             <br/>
             
-            <img src="Images/download.jpeg" width="300"/>
+            <img src="images/download.jpeg" width="300"/>
         <br/>
         <br/>
             Shaun White was born on September 3, 1986. As a professional snowboarder, he was earned three Olympic gold medals. He also holds the record for the most gold medals for both the X-Games and the Olympics as a snowboarder. White received his first sponsor at age seven and was quickly recognized by many professional skateboarders. Tony Hawk was one, and he noticed Shaun White skateboarding when he was only nine. Tony Hawk mentored him until he was 17. He is most recognized for his multiple medals in the and summer and winter X-Games and the Winter Olympics.
