--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
             <font color="white">
             <center>
                 <h1> Welcome to my Webstite </h1>
+                <h2> First quarter links </h2>
+                <a href="jsTester.html">Click here to go to the JS page. </a>
+                <br/>
+                <br/>
+                <br/>
                 <img src="https://i.pinimg.com/originals/b2/65/b3/b265b3682d83ae382d7ced018554de00.jpg"/>
                 </center>
             <p> <a href="hero.html">Click here to go to the Hero Page. </a>
