--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <img src="https://i.pinimg.com/originals/b2/65/b3/b265b3682d83ae382d7ced018554de00.jpg"/>
                 </center>
             <p> <a href="hero.html">Click here to go to the Hero Page. </a>
+                <br/>
+                <a href="slideshow.html">Click here to go to the Slide Show Page. </a>
             </p>
    
         </body>
