--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
                 <br/>
                 <br/>
                 <img src="https://i.pinimg.com/originals/b2/65/b3/b265b3682d83ae382d7ced018554de00.jpg"/>
-                </center>
+                
             <p> <a href="hero.html">Click here to go to the Hero Page. </a>
                 <br/>
                 <a href="slideshow.html">Click here to go to the Slide Show Page. </a>
+                <a href="magic8ball.html">Click here to go to the Magic 8 Ball Page. </a>
+
             </p>
-   
+         </center>
         </body>
 </html>
