--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <p> <a href="hero.html">Click here to go to the Hero Page. </a>
                 <br/>
                 <a href="slideshow.html">Click here to go to the Slide Show Page. </a>
+                <br/>
                 <a href="magic8ball.html">Click here to go to the Magic 8 Ball Page. </a>
-
+                <br/>
+<a href="binCounter.html">Click here to go to the Binary Counter Page. </a>
             </p>
          </center>
         </body>
