--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a href="magic8ball.html">Click here to go to the Magic 8 Ball Page. </a>
                 <br/>
 <a href="binCounter.html">Click here to go to the Binary Counter Page. </a>
+                <br/>
+                <a href="anim1.html">Click here to go to the Animation Page. </a>
+
             </p>
          </center>
         </body>
