--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
             <font color="white">
             <center>
                 <h1> Welcome to my Webstite </h1>
-                <h2> First quarter links </h2>
-                <a href="jsTester.html">Click here to go to the JS page. </a>
-                <br/>
                 <br/>
                 <br/>
                 <img src="https://i.pinimg.com/originals/b2/65/b3/b265b3682d83ae382d7ced018554de00.jpg"/>
                 
-            <p> <a href="hero.html">Click here to go to the Hero Page. </a>
-                <br/>
-                <a href="slideshow.html">Click here to go to the Slide Show Page. </a>
-                <br/>
-                <a href="magic8ball.html">Click here to go to the Magic 8 Ball Page. </a>
-                <br/>
-<a href="binCounter.html">Click here to go to the Binary Counter Page. </a>
-                <br/>
+            <p>
+               
+                <a href="madLib.html">Click here to go to the MadLib Page. </a>
+               <br/>
                 <a href="anim1.html">Click here to go to the Animation Page. </a>
+               <br/>
+<a href="binCounter.html">Click here to go to the Binary Counter Page. </a>
+               <br/>
+               <a href="magic8ball.html">Click here to go to the Magic 8 Ball Page. </a>
+           <br/>     
+               <a href="slideshow.html">Click here to go to the Slide Show Page. </a>
+                <br/>
+               <a href="jsTester.html">Click here to go to the JS page. </a>
+               <br/>
+               <a href="hero.html">Click here to go to the Hero Page. </a>
+                <br/>
 
             </p>
          </center>
