--- a/madLib.html
+++ b/madLib.html
@@ -46,39 +46,11 @@ function displayStory()
    
 	for ( i = 0; i < answers.length; i++)
 	{
-	
+	  answer = answer + story[i]
+     answer = answer + answers[i]
+     
 	}
    
-   answer = answer + story[0]
-   answer = answer + answers[0]
-   answer = answer + story[1]
-   answer = answer + answers[1]
-      answer = answer + story[2]
-   answer = answer + answers[2]
-      answer = answer + story[3]
-   answer = answer + answers[3]
-      answer = answer + story[4]
-   answer = answer + answers[4]
-      answer = answer + story[5]
-   answer = answer + answers[5]
-      answer = answer + story[6]
-   answer = answer + answers[6]
-      answer = answer + story[7]
-   answer = answer + answers[7]
-      answer = answer + story[8]
-   answer = answer + answers[8]
-      answer = answer + story[9]
-   answer = answer + answers[9]
-      answer = answer + story[10]
-   answer = answer + answers[10]
-      answer = answer + story[11]
-   answer = answer + answers[11]
-      answer = answer + story[12]
-   answer = answer + answers[12]
-      answer = answer + story[13]
-   answer = answer + answers[13]
-      answer = answer + story[14]
-   answer = answer + answers[14]
       answer = answer + story[15]
    
 	// Make the story div visible, and the userEnter div hidden.		
