--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
                 <img src="https://i.pinimg.com/originals/b2/65/b3/b265b3682d83ae382d7ced018554de00.jpg"/>
                 
                <h3> Second semester links </h3>
-               
+                    <a href="quiz.html">Click here to go to the Quiz Page. </a>
+
                <a href="funFacts.html">Click here to go to the funFacts Page. </a>
                <br/>
                                <a href="anim1.html">Click here to go to the Animation Page. </a>
